--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sanitize-html": "^2.13.1",
     "socket.io": "^4.7.5",
     "stripe": "^17.2.0",
+    "useragent": "^2.3.0",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
@@ -58,6 +59,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/sanitize-html": "^2.13.0",
     "@types/semver": "^7.5.8",
+    "@types/useragent": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
